{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "973fcb8f-ab28-f41a-2ac7-86ec97dd90e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "langflow_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d71405067870805",
            "arn": "arn:aws:ec2:us-east-1:112113402575:elastic-ip/eipalloc-07d71405067870805",
            "association_id": "eipassoc-05cf0b290759a7b2d",
            "domain": "vpc",
            "id": "eipalloc-07d71405067870805",
            "instance": "i-0019fcf7db410f11b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ebe7a2a7078fd8a",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-75-101-245-210.compute-1.amazonaws.com",
            "public_ip": "75.101.245.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-eip"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.langflow_profile",
            "aws_iam_role.langflow_role",
            "aws_instance.langflow_instance",
            "aws_internet_gateway.langflow_igw",
            "aws_key_pair.langflow_key",
            "aws_security_group.langflow_sg",
            "aws_subnet.langflow_public_subnet",
            "aws_vpc.langflow_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "langflow_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:112113402575:instance/i-0019fcf7db410f11b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "langflow-demo-ec2-profile",
            "id": "i-0019fcf7db410f11b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "langflow-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ebe7a2a7078fd8a",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-18-212-203-48.compute-1.amazonaws.com",
            "public_ip": "18.212.203.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:112113402575:key/628aa240-8b71-4196-87a3-e5e95a62df5d",
                "throughput": 125,
                "volume_id": "vol-059f43b2c0bfc9d31",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0ed57461b32a35e",
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-instance"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018d7f86e632ca01f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.langflow_profile",
            "aws_iam_role.langflow_role",
            "aws_key_pair.langflow_key",
            "aws_security_group.langflow_sg",
            "aws_subnet.langflow_public_subnet",
            "aws_vpc.langflow_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "langflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112113402575:internet-gateway/igw-0b01311bc7182c66f",
            "id": "igw-0b01311bc7182c66f",
            "owner_id": "112113402575",
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-igw"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-igw"
            },
            "vpc_id": "vpc-051f897b41fde033e"
          },
          "dependencies": [
            "aws_vpc.langflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "langflow_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112113402575:route-table/rtb-0cfdb89c3c86420b4",
            "id": "rtb-0cfdb89c3c86420b4",
            "owner_id": "112113402575",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b01311bc7182c66f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-public-rt"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f897b41fde033e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.langflow_igw",
            "aws_vpc.langflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "langflow_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c34bd6835654e53b",
            "route_table_id": "rtb-0cfdb89c3c86420b4",
            "subnet_id": "subnet-0a0ed57461b32a35e"
          },
          "dependencies": [
            "aws_internet_gateway.langflow_igw",
            "aws_route_table.langflow_public_rt",
            "aws_subnet.langflow_public_subnet",
            "aws_vpc.langflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "langflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112113402575:security-group/sg-018d7f86e632ca01f",
            "description": "Security group for Langflow instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018d7f86e632ca01f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Langflow",
                "from_port": 7860,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7860
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "langflow-demo-sg",
            "name_prefix": "",
            "owner_id": "112113402575",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-sg"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f897b41fde033e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.langflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "langflow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112113402575:subnet/subnet-0a0ed57461b32a35e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0ed57461b32a35e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "112113402575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-public-subnet"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-public-subnet"
            },
            "vpc_id": "vpc-051f897b41fde033e"
          },
          "dependencies": [
            "aws_vpc.langflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "langflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112113402575:vpc/vpc-051f897b41fde033e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f59d40b1ff969557",
            "default_route_table_id": "rtb-08d6dd75a07f928fd",
            "default_security_group_id": "sg-066601f9ca4662dc6",
            "dhcp_options_id": "dopt-0cb7e776",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051f897b41fde033e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d6dd75a07f928fd",
            "owner_id": "112113402575",
            "tags": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-vpc"
            },
            "tags_all": {
              "AccountId": "112113402575",
              "Environment": "demo",
              "Name": "langflow-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}